not creating io acceptor on server creation

--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,20 @@ License along with Postal.  If not, see <http://www.gnu.org/licenses/>.
 	<name>rjs-server</name>
 	<version>0.1-SNAPSHOT</version>
 
+	<build>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<artifactId>maven-compiler-plugin</artifactId>
+					<configuration>
+						<source>1.5</source>
+						<target>1.5</target>
+					</configuration>
+				</plugin>
+			</plugins>
+		</pluginManagement>
+	</build>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.apache.mina</groupId>
