--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@ FITNESS FOR A PARTICULAR PURPOSE.  See the GNU Lesser General Public
 License for more details.
 
 You should have received a copy of the GNU Lesser General Public
-License along with Postal.  If not, see <http://www.gnu.org/licenses/>.
+License along with rjs.  If not, see <http://www.gnu.org/licenses/>.
 -->
 
 <project xmlns="http://maven.apache.org/POM/4.0.0"
